[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleBar/HeatBar_HeatPerAttackIcon.png" type="Texture" id=2]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleBar/HeatBar_HeatPerAttackHeader.png" type="Texture" id=3]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleBar/HeatBar_ChunkSeparator.png" type="Texture" id=4]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleBar/HeatBar_HeatIcon.png" type="Texture" id=5]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleBar/HeatBar_FillForeground_Below25.png" type="Texture" id=6]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleBar/HeatBar_TotalHeatHeader.png" type="Texture" id=7]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleBar/HeatBar_BarBackground.png" type="Texture" id=8]
[ext_resource path="res://MiscRelated/ControlProgressBarRelated/ControlProgressBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleBar/HeatModuleBarPanel.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[node name="HeatModuleBarPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 106.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Headers" type="MarginContainer" parent="VBoxContainer"]
margin_right = 106.0
margin_bottom = 12.0
mouse_filter = 2

[node name="TotalHeader" type="MarginContainer" parent="VBoxContainer/Headers"]
margin_right = 32.0
margin_bottom = 12.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="Background" type="TextureRect" parent="VBoxContainer/Headers/TotalHeader"]
margin_right = 32.0
margin_bottom = 12.0
mouse_filter = 2
texture = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Headers/TotalHeader"]
margin_left = 22.0
margin_right = 32.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6
custom_constants/margin_right = 3
custom_constants/margin_top = 2

[node name="HeatIcon" type="TextureRect" parent="VBoxContainer/Headers/TotalHeader/MarginContainer"]
margin_top = 2.0
margin_right = 7.0
margin_bottom = 11.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/Headers/TotalHeader"]
margin_right = 32.0
margin_bottom = 12.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/margin_top = 3
custom_constants/margin_left = 4

[node name="CurrentHeatLabel" type="Label" parent="VBoxContainer/Headers/TotalHeader/Marginer"]
margin_left = 4.0
margin_top = 3.0
margin_right = 32.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="PerAttackHeader" type="MarginContainer" parent="VBoxContainer/Headers"]
margin_left = 70.0
margin_right = 106.0
margin_bottom = 12.0
mouse_filter = 2
size_flags_horizontal = 10

[node name="Background" type="TextureRect" parent="VBoxContainer/Headers/PerAttackHeader"]
margin_right = 36.0
margin_bottom = 12.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Headers/PerAttackHeader"]
margin_left = 13.0
margin_right = 36.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6
custom_constants/margin_right = 3
custom_constants/margin_top = 2

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/Headers/PerAttackHeader/MarginContainer"]
margin_top = 2.0
margin_right = 20.0
margin_bottom = 11.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/Headers/PerAttackHeader"]
margin_right = 8.0
margin_bottom = 12.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 6
custom_constants/margin_top = 3
custom_constants/margin_left = 4

[node name="HeatPerAttackLabel" type="Label" parent="VBoxContainer/Headers/PerAttackHeader/Marginer"]
margin_left = 4.0
margin_top = 3.0
margin_right = 8.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Body" type="MarginContainer" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 106.0
margin_bottom = 12.0
rect_min_size = Vector2( 106, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="CurrentHeatBar" parent="VBoxContainer/Body" instance=ExtResource( 9 )]
margin_right = 106.0
margin_bottom = 0.0
value_per_chunk = 25.0
display_chunks = true
chunk_separator_pic = ExtResource( 4 )
bar_background_pic = ExtResource( 8 )
fill_foreground_pic = ExtResource( 6 )
fill_foreground_margin_top = 1.0
fill_foreground_margin_left = 1.0
max_value = 100.0
